--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=proiectTW
-DB_USERNAME=proiectTW
-DB_PASSWORD=root
+DB_DATABASE=ProiectTW
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
